Fix dice area stretch and improve Discord screenshot

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -65,7 +65,8 @@ html, body {
         flex-direction: column;
 
         > *          { flex: 0 0 auto; margin: @padding 0 0; }
-        > .dice-list { flex-grow: 1; }
+        > .roll-area { flex: 1 1 auto; display: flex; flex-direction: column; }
+        > .roll-area > .dice-list { flex-grow: 1; }
     }
 
     .roll-bar {
